# acqmcp

./: .env.sample  .gitignore  Dockerfile  PLAN.md  add-mcp-to-claude.sh  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: architecture.md  auth.md  container.md  kubernetes.md  local-development.md
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
scripts/: render_k8s_env.py
src/acqmcp/: __init__.py  alma_client.py  auth.py  main.py  mcp_server.py  openapi_catalog.py  settings.py
tests/: test_alma_client.py  test_auth.py  test_mcp_server.py  test_openapi_catalog.py
