[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "acqmcp"
version = "0.1.0"
description = "MCP server for Ex Libris Alma Acquisitions APIs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "mcp>=1.27,<2",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1,<2",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
]

[project.scripts]
acqmcp = "acqmcp.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
